feature: adding sector to list customers response (#485)
* feature: adding sector to list customers response

* adding isNviInstitution() to hashCode and equals mehods

* updating customer openapi schema